// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`given an invalid policy should return the error in an expected format 1`] = `
Array [
  [ValidationError: "default.directives" is required],
]
`;

exports[`given two invalid policies should return the errors in an expected format 1`] = `
Array [
  [ValidationError: "default.directives" is required],
  [ValidationError: "foo/index.html.directives" is required],
]
`;
